Refactor FindItemBehaviour - Refactor FindItemBehaviour use get(0)